--- a/index.html
+++ b/index.html
@@ -1,82 +1,158 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>laurie71/browser-shim @ GitHub</title>
 
-	<title>laurie71/browser-shim @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #52894d;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #ad76b2; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #ad76b2; }
-    h3 { text-align: center; color: #ad76b2; }
-    a { color: #ad76b2; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushJScript.js" type="text/javascript"></script>
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushXml.js" type="text/javascript"></script>
+    <!--<link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />-->
+    <!--<link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDjango.css" rel="stylesheet" type="text/css" />-->
+    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeRDark.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">SyntaxHighlighter.all()</script>
+
+    <style type="text/css">
+        body {
+            margin-top: 1.0em;
+            background-color: #52894d;
+            font-family: "Helvetica,Arial,FreeSans";
+            color: #ffffff;
+        }
+
+        pre { background: #000; color: #fff; padding: 15px;}
+        hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+        h3 { text-align: center; color: #ad76b2; }
+        h2 { font-size: 1.5em; color: #1B2426; }
+        h1 { font-size: 3.8em; color: #ad76b2; margin-bottom: 3px; }
+        h1 .small { font-size: 0.4em; }
+        h1 a { text-decoration: none }
+        a { color: #435A5F; }
+
+        #container { margin: 0 auto; width: 90%; }
+
+        .download { float: right; }
+        .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+        .footer { text-align:center; padding-top:30px; font-style: italic; }
+
+        .boxes { position: relative; }
+        .box { overflow: auto; margin-top: 1em; }
+        #shared-module #on-node { width: 50%; }
+        #xxx-on-browser { width: 60%; }
+    </style>
 </head>
 
 <body>
-  <a href="http://github.com/laurie71/browser-shim"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/laurie71/browser-shim"><img
+        style="position: absolute; top: 0; right: 0; border: 0;"
+        src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+        alt="Fork me on GitHub"/></a>
 
-  <div id="container">
-
+<div id="container">
     <div class="download">
-      <a href="http://github.com/laurie71/browser-shim/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/laurie71/browser-shim/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+        <a href="http://github.com/laurie71/browser-shim/zipball/master">
+            <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+        <a href="http://github.com/laurie71/browser-shim/tarball/master">
+            <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
     <h1><a href="http://github.com/laurie71/browser-shim">browser-shim</a>
-      <span class="small">by <a href="http://github.com/laurie71">laurie71</a></span></h1>
+        <span class="small">by <a href="http://github.com/laurie71">laurie71</a></span>
+    </h1>
 
     <div class="description">
-      Easy sharing of scripts between NodeJS and the browser.
+        Easy code sharing between browser and NodeJS.
     </div>
 
+    <div class="boxes">
+        <div id="shared-module" class="box">
+            <label for="shared-module">shared-module.js:</label>
+<code><pre class="brush:js">
+var shim = require('browser-shim');
+var pkg = shim.provide('my.awesome.package');
+
+pkg.greet = function(name) {
+    console.log('Hello ' + name + '!');
+};
+</pre></code>
+        </div>
+
+        <div id="on-node" class="box">
+            <label for="on-node">Use it in NodeJS:</label>
+<code><pre class="brush:js">
+var shim = require('browser-shim');
+var pkg = require('shared-module');
+
+shim.httpShim('/shim.js', 5040);
+pkg.greet('Node');
+// ...
+</pre></code>
+        </div>
+
+        <div id="on-client" class="box">
+            <label for="on-client">Use it in the Browser:</label>
+<code><pre class="brush:xml">
+&lt;html&gt;
+&lt;head&gt;
+    &lt;title&gt;Shim In!&lt;/title&gt;
+    &lt;script src="http://localhost:5040/shim.js"&gt;&lt;/script&gt;
+    &lt;script src="http://localhost:5040/shared-module.js"&gt;&lt;/script&gt;
+    &lt;script&gt;
+        pkg.greet('Browser');
+    &lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+    &lt;h1&gt;Shim In!&lt;/h1&gt;
+    &lt;p&gt;Check the browser console...&lt;/p&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</pre></code>
+        </div>
+    </div>
+
+
+
+
+
     <h2>Install</h2>
-<p>npm browser-shim</p>
-<h2>License</h2>
-<p>MIT</p>
-<h2>Authors</h2>
-<p>Laurie Harper<br/><br/>      </p>
+
+    <p>npm browser-shim</p>
+
+    <h2>License</h2>
+
+    <p>MIT</p>
+
+    <h2>Authors</h2>
+
+    <p>Laurie Harper
+        <br/>
+        <br/></p>
 
 
     <h2>Download</h2>
+
     <p>
-      You can download this project in either
-      <a href="http://github.com/laurie71/browser-shim/zipball/master">zip</a> or
-      <a href="http://github.com/laurie71/browser-shim/tarball/master">tar</a> formats.
+        You can download this project in either
+        <a href="http://github.com/laurie71/browser-shim/zipball/master">zip</a>
+        or
+        <a href="http://github.com/laurie71/browser-shim/tarball/master">tar</a>
+        formats.
     </p>
+
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/laurie71/browser-shim</pre>
+        by running:
+    <pre>$ git clone git://github.com/laurie71/browser-shim</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/laurie71/browser-shim">laurie71/browser-shim</a>
+        get the source code on GitHub : <a
+            href="http://github.com/laurie71/browser-shim">laurie71/browser-shim</a>
     </div>
 
-  </div>
+</div>
 
-  
+
 </body>
 </html>
