--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@
             <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
+
     <h1><a href="http://github.com/laurie71/browser-shim">browser-shim</a>
         <span class="small">by <a href="http://github.com/laurie71">laurie71</a></span>
     </h1>
 
+
     <div class="description">
         Easy code sharing between browser and NodeJS.
     </div>
+
 
     <div class="boxes">
         <div id="shared-module" class="box">
@@ -97,8 +100,8 @@ pkg.greet('Node');
 &lt;html&gt;
 &lt;head&gt;
     &lt;title&gt;Shim In!&lt;/title&gt;
-    &lt;script src="http://localhost:5040/shim.js"&gt;&lt;/script&gt;
-    &lt;script src="http://localhost:5040/shared-module.js"&gt;&lt;/script&gt;
+    &lt;script src="http://myhost.net:5040/shim.js"&gt;&lt;/script&gt;
+    &lt;script src="shared-module.js"&gt;&lt;/script&gt;
     &lt;script&gt;
         pkg.greet('Browser');
     &lt;/script&gt;
@@ -113,26 +116,16 @@ pkg.greet('Node');
     </div>
 
 
-
-
-
     <h2>Install</h2>
-
     <p>npm browser-shim</p>
 
     <h2>License</h2>
-
     <p>MIT</p>
 
     <h2>Authors</h2>
-
-    <p>Laurie Harper
-        <br/>
-        <br/></p>
-
+    <p>Laurie Harper</p>
 
     <h2>Download</h2>
-
     <p>
         You can download this project in either
         <a href="http://github.com/laurie71/browser-shim/zipball/master">zip</a>
@@ -142,17 +135,14 @@ pkg.greet('Node');
     </p>
 
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-        by running:
-    <pre>$ git clone git://github.com/laurie71/browser-shim</pre>
+        by running: <pre>$ git clone git://github.com/laurie71/browser-shim</pre>
     </p>
 
     <div class="footer">
-        get the source code on GitHub : <a
-            href="http://github.com/laurie71/browser-shim">laurie71/browser-shim</a>
+        get the source code on GitHub :
+        <a href="http://github.com/laurie71/browser-shim">laurie71/browser-shim</a>
     </div>
-
 </div>
-
 
 </body>
 </html>
